# RoboMaster

./: README.md  build.md
config/: CMakeLists.txt  package.xml
config/cfg/: map_to_path_1m.txt  map_to_path_2m.txt  map_to_path_3m.txt  map_to_path_4m.txt  unitree_nav.txt
config/launch/: unitree_control.launch  unitree_navigation.launch
config/maps/: map.pgm  map.yaml
config/rviz/: unitree_navigation.rviz
config/yaml/: Astar.yaml  GlobalPlanner.yaml  StaticMap.yaml
detect/: detect.py  detect2.py  newdetect.py
go/: CMakeLists.txt
go/include/: go.hpp
go/launch/: go.launch
go/scripts/: detect.py  spine.py
go/src/: go.cpp
smooth_control/: CMakeLists.txt  README.md  package.xml
smooth_control/include/smooth_control/: smooth_control.h
smooth_control/src/: smooth_control.cc
unitree_nav_ros/: CMakeLists.txt  package.xml
unitree_nav_ros/include/unitree_nav_ros/: astar.h  global_planner.h  libUnitreeNav.h  spline_planner.h
unitree_nav_ros/src/: UnitreeNav.cc  UnitreeNav_node.cc  astar.cpp  global_planner.cpp  spline_planner.cpp
