<?xml version="1.0"?>
<package format="2">
    <name>unitree_nav_ros</name>
    <version>0.0.0</version>
    <description>The unitree_nav_ros package</description>

    <maintainer email="zjr@todo.todo">zjr</maintainer>

    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <depend>unitree_legged_msgs</depend>
    <depend>image_transport</depend>
    <build_depend>opencv</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_export_depend>pcl_conversions</build_export_depend>
    <exec_depend>pcl_conversions</exec_depend>
    
    <export>
    </export>
</package>
